[project]
name = "python_markdown_document_offsets_injection_extension"
version = "0.0.2"
description = "A Python-Markdown compiler plugin that put markdown words offset to the output HTML."
authors = [{ name = "HikariLan", email = "hikarilan@minecraft.kim" }]
license = { text = "Apache-2.0" }
readme = "README.md"
dependencies = [
    "markdown>=3.6",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pygments>=2.18.0",
    "pymdown-extensions>=10.8.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_markdown_document_offsets_injection_extension"]

[tool.rye.scripts]
test = "python ./test"

[project.entry-points."markdown.extensions"]
document-offsets-injection = "python_markdown_document_offsets_injection_extension.extension:MainExtension"
